# foodplan

./: .env.example  .gitignore  DELIVERABLES_OVERVIEW.md  DOCUMENT_INDEX.md  IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  README_IMPLEMENTATION.md  SYSTEM_ARCHITECTURE.md  api_endpoints.py  catalog_service.py  config.py  config_env.py  end_to_end_test.py  food.py  food_map.xlsx  ingest.py  ingredient_mapper.py  learning_system.py  main.py  meal_planner.py  model.py  models.py  price_agent.py  prompt.py  pyproject.toml  pytest.ini  requirements.txt  sample.py  search.py  validate_setup.py
schemas/: preferences.py
tests/: README.md  __init__.py  conftest.py  test_api_endpoints.py  test_config.py  test_ingredient_mapper.py  test_learning_system.py  test_meal_planner.py  test_models.py
utils/: user_preferences.py
